YAMLs/ostad-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-ui
  namespace: shaddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ostad-ui
  template:
    metadata:
      labels:
        app: ostad-ui
    spec:
      containers:
        - name: ostad-ui
          image: <your-frontend-image>
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui-service
  namespace: shaddy
spec:
  type: NodePort
  selector:
    app: ostad-ui
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30080
