YAMLs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shaddy-ingress
  namespace: shaddy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: chat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ostad-ui-service
                port:
                  number: 5173
    - host: mongo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
